# Kube-agent

./: .env.example  .gitignore  CONTRIBUTING.md  DEMO_VS_REAL.md  GITOPS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STRUCTURE.md  README.md  README_GITHUB.md  REAL_DEPLOYMENT.sh  cleanup.sh  demo_interactive.py  main.py  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.sh  test_modes.sh  test_system.py
agents/: __init__.py  argocd_agent.py  documentation_agent.py  infrastructure_agent.py  monitoring_agent.py  orchestrator_agent.py  planner_agent.py  validation_agent.py
core/: __init__.py  agent_base.py  config.py  llm_provider.py  state_manager.py
docs/: AGENTS.md  ARCHITECTURE.md  CONFIGURATION.md  INDEX.md  QUICKSTART.md
examples/: aks-dev.yaml  eks-prod.yaml  k3s-local.yaml
terraform/k3s/: main.tf
