[tool.poetry]
name = "terraform-k8s-agent"
version = "0.1.0"
description = "Système agentique IA pour l'automatisation complète de clusters Kubernetes"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
langchain = ">=0.1.0"
langchain-openai = ">=0.0.5"
langchain-anthropic = ">=0.0.1"
langchain-community = ">=0.0.20"
crewai = ">=0.1.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-terraform = "^0.10.1"
kubernetes = "^28.1.0"
pyyaml = "^6.0.1"
typer = "^0.9.0"
rich = "^13.7.0"
questionary = "^2.0.1"
openai = "^1.10.0"
anthropic = "^0.8.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
terraform-k8s-agent = "main:app"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=html --cov-report=term"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
